errors were fixed